--- a/locales/ru_RU.json
+++ b/locales/ru_RU.json
@@ -5,17 +5,17 @@
     "bug-reports-front": "веб-клиент / интерфейс.",
     "chat": "Чат с пользователями и разработчиками",
     "contact": "Контактная информация:",
-    "contact-language": "Preferred language is English, as we have both international contributors and users.",
+    "contact-language": "Предпочтительный язык - английский, так как у нас есть как участники, так и пользователи из других стран.",
     "data": "Данные:",
     "data-description": "Основано на проекте <a href=\"https://www.openstreetmap.org\" target=\"_blank\">OpenStreetMap</a>. Обычно оно ежедневно обновляется, видит даты <a href=\"https://brouter.de/brouter/segments4/\" target=\"_blank\">загруженных файлов.",
     "description": "Online service of the BRouter routing engine. For the offline Android app and more information see <a href=\"https://brouter.de/\" target=\"_blank\">brouter.de</a>",
     "details": "<i><a href=\"{{privacyPolicyUrl}}\" target=\"_blank\">Политика конфиденциальности</a></i>\n<i><a href=\"https://github.com/nrenner/brouter-web#credits-and-licenses\" target=\"_blank\"></a></i>\n<i><a href=\"https://github.com/nrenner/brouter-web/blob/master/CHANGELOG.md\" target=\"_blank\">Журнал изменений</a></i>и\n<i><a href=\"https://github.com/nrenner/brouter-web#readme\" target=\"_blank\">подробнее</a></i> о клиенте.",
     "support": "Общие дискуссии/ вопросы, поддержка",
     "title": "О сервисе",
-    "tooltip": "Show more information about BRouter-Web"
+    "tooltip": "Показать дополнительную информацию о BRouter-Web"
   },
   "credits": {
-    "boundaries": "Administrative Boundaries: <a href=\"https://osm-boundaries.com\" target=\"_blank\">OSM-Boundaries</a>, <a href=\"https://overpass-api.de/\" target=\"_blank\">Overpass API</a>",
+    "boundaries": "Административные границы: <a href=\"https://osm-boundaries.com\" target=\"_blank\">OSM-Boundaries</a>, <a href=\"https://overpass-api.de/\" class=\"overpass-url\" target=\"_blank\">Overpass API</a>",
     "brouter": "BRouter",
     "brouter-license": "<a target=\"_blank\" href=\"https://brouter.de/brouter\">BRouter</a> &copy; Arndt Brenschede",
     "elevation-data": "Elevation data",
@@ -25,6 +25,7 @@
     "map-tiles": "Картографические фрагменты",
     "nominatim": "Search by <a href=\"https://wiki.openstreetmap.org/wiki/Nominatim\" target=\"_blank\" data-i18n=\"credits.nominatim\">Nominatim</a>",
     "openstreetmap": "&copy; <a target=\"_blank\" href=\"https://www.openstreetmap.org/copyright\" >OpenStreetMap contributors</a> under <a target=\"_blank\" href=\"https://opendatacommons.org/licenses/odbl/\" >ODbL</a>",
+    "pois": "Locations (POIs): <a href=\"https://overpass-api.de/\" class=\"overpass-url\" target=\"_blank\">Overpass API</a>",
     "title": "Credits"
   },
   "export": {
@@ -70,22 +71,27 @@
   "layers": {
     "add-base": "Добавить базовый слой",
     "add-overlay": "Добавить наложение",
+    "add-overpass": "Add overpass query",
+    "custom-layer-name-helptext": "ex: OpenStreetMap",
+    "custom-layer-name-label": "Custom layer name",
+    "custom-layer-url-helptext-normal": "URL for normal layers, ex: https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",
+    "custom-layer-url-helptext-overpass": "Overpass Query, ex: nwr[shop]['diet:vegan']['diet:vegan'!=no];",
+    "custom-layer-url-label": "Custom layer URL/Query",
     "customize": "Настроить слои",
     "opacity-slider": "Opacity slider",
-    "placeholder-layer-name": "Имя пользовательского слоя. (наприм. OpenStreetMap)",
-    "placeholder-layer-url": "Custom layer URL. (ex: https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png)",
+    "overpass-loading-indicator": "Running Overpass API query ...",
     "remove-selection": "Убрать выделение"
   },
   "loadNogos": {
     "defaultProperties": "Default properties",
-    "file": "File (.geojson): ",
+    "file": "Файл (.geojson)",
     "load": "Загрузить",
-    "nogoBuffer": "Buffer no-go areas (in meters): ",
-    "nogoRadius": "No-go radius for points (in meters): ",
-    "nogoWeight": "No-go weight (-1 means impassable): ",
+    "nogoBuffer": "Buffer no-go areas (in meters)",
+    "nogoRadius": "No-go radius for points (in meters)",
+    "nogoWeight": "No-go weight (-1 means impassable)",
     "source": "Источник",
     "title": "Загрузить запретные зоны",
-    "url": "URL: "
+    "url": "URL"
   },
   "map": {
     "attribution-osm-long": "Участники OpenStreetMap",
@@ -152,8 +158,7 @@
     "zoomOutTitle": "Уменьшить"
   },
   "modal": {
-    "close": "Закрыть"
-  },
+    "close": "Закрыть"},
   "navbar": {
     "about": "About",
     "alternative": {
@@ -167,7 +172,7 @@
     "load": {
       "nogos": "Load no-go areas",
       "title": "Загрузить",
-      "tooltip": "{{tracksAction}} ({{tracksKey}} key)\n{{nogosAction}} ({{nogosKey}})",
+      "tooltip": "{{tracksAction}} ({{tracksKey}} key)\n{{trackAsRouteAction}} ({{trackAsRouteKey}})\n{{nogosAction}} ({{nogosKey}})",
       "tracks": "Load tracks"
     },
     "profile": {
@@ -230,6 +235,7 @@
         "europe": "Европа",
         "europe-monolingual": "Europe monolingual",
         "overlays": "Наложение",
+        "overpass": "Locations (POIs)",
         "worldwide": "Всемирный",
         "worldwide-international": "Многоязычный во всём мире",
         "worldwide-monolingual": "Одноязычный во всём мире"
@@ -243,15 +249,16 @@
       "overlay-opacity": "Перекрытие прозрачностью",
       "overlay-opacity_plural": "Overlays transparency",
       "table": {
-        "URL": "URL-адрес",
+        "URL": "URL/Query",
         "empty": "Произвольный слой ещё не настроен.",
         "name": "Название",
         "type": "Тип",
-        "type_layer": "Layer",
-        "type_overlay": "Overlay"
+        "type_layer": "Слой",
+        "type_overlay": "Overlay",
+        "type_overpass_query": "Overpass Query"
       },
       "title": "Слои",
-      "tooltip": "Select layers"
+      "tooltip": "Выбрать слои"
     },
     "profile": {
       "apply": "Применить",
@@ -266,11 +273,12 @@
   },
   "title": "Веб-клиент BRouter",
   "trackasroute": {
+    "browse": "Browse",
     "explainpoi": "(show waypoints as POI's)",
     "explaintracklayer": "(show Track as separate Layer)",
     "file": "Trackfile",
-    "fuzziness": "fuzziness",
-    "pleasewait": "Please wait!",
+    "fuzziness": "Fuzziness",
+    "pleasewait": "Пожалуйста подождите!",
     "showpois": "POI's",
     "title": "Load Track as Route",
     "tracklayer": "Track Layer",
@@ -290,6 +298,6 @@
   },
   "whatsnew": {
     "new-version": "A new version was released since your last visit. Click <a href='.' data-toggle='modal' data-target='#whatsnew'>here</a> to see what's new!",
-    "title": "What's new?"
+    "title": "Что нового?"
   }
 }
